--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Doggos</string>
     <string name="title_home">Dogs</string>
     <string name="title_search">Search</string>
+    <string name="dog_breed_image">Dog breed image</string>
 </resources>
