Add grid layout Add button to switch between list and grid view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">Dogs</string>
     <string name="title_search">Search</string>
     <string name="dog_breed_image">Dog breed image</string>
+    <string name="layout">Layout</string>
+    <string name="order">Order</string>
 </resources>
