--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="name">Name:</string>
     <string name="group">Group:</string>
     <string name="origin">Origin:</string>
+    <string name="temperament">Temperament</string>
 </resources>
